--- a/UI/angular.json
+++ b/UI/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/online-shop 2.0",
+            "outputPath": "dist/watch-shop",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
