--- a/UI/angular.json
+++ b/UI/angular.json
@@ -21,7 +21,9 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.scss",
+              "src/assets/design/palette.scss",
+              "src/assets/design/fonts/fonts.scss"
             ],
             "scripts": []
           },
@@ -78,7 +80,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
