--- a/UI/package.json
+++ b/UI/package.json
@@ -10,18 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/cdk": "^15.0.4",
+    "@angular/animations": "^15.2.10",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.4",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "rxjs": "~7.5.0",
-    "swiper": "^8.4.5",
+    "swiper": "^8.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -36,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "sass": "^1.86.0",
     "typescript": "~4.8.2"
   }
 }
